--- a/Password-Manager-UI/src/app/Components/register/register.component.html
+++ b/Password-Manager-UI/src/app/Components/register/register.component.html
@@ -9,13 +9,14 @@
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
   
-                  <form class="mx-1 mx-md-4">
+                  <form class="mx-1 mx-md-4" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <label class="form-label" for="form3Example1c">Username</label>
-                        <input type="text" id="form3Example1c" class="form-control" />
+                        <input type="text" id="form3Example1c" class="form-control" name="username"
+                        formControlName="username"/>
                       </div>
                     </div>
   
@@ -23,7 +24,8 @@
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <label class="form-label" for="form3Example3c">Email</label>
-                        <input type="email" id="form3Example3c" class="form-control" />
+                        <input type="email" id="form3Example3c" class="form-control" name="email"
+                        formControlName="email"/>
                       </div>
                     </div>
   
@@ -31,7 +33,8 @@
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <label class="form-label" for="form3Example4c">Password</label>
-                        <input type="password" id="form3Example4c" class="form-control" />
+                        <input type="password" id="form3Example4c" class="form-control" name="password"
+                        formControlName="password" />
                       </div>
                     </div>
   
@@ -44,22 +47,22 @@
                     </div>
   
                     <div class="form-check d-flex justify-content-center mb-5">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                      <label class="form-check-label" for="form2Example3">
-                        I agree all statements in <a href="#!">Terms of service</a>
-                      </label>
+                      <a
+                      [routerLink]="['/login']"
+                      class="align-self-center mt-1"
+                      >Already have an account ?</a>
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg">Register</button>
+                      <button type="submit" class="btn btn-primary btn-lg">Register</button>
                     </div>
-  
+
                   </form>
   
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
   
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                  <img src="https://bsmknighterrant.org/wp-content/uploads/2018/03/Leif-Distractions.jpg"
                     class="img-fluid" alt="Sample image">
   
                 </div>
