--- a/Password-Manager-UI/src/app/Components/reset-password/reset-password.component.html
+++ b/Password-Manager-UI/src/app/Components/reset-password/reset-password.component.html
@@ -7,37 +7,39 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
   
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign in</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Reset Your Password</p>
   
-                  <form class="mx-1 mx-md-4" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+                  <form class="mx-1 mx-md-4" [formGroup]="recoverPassForm" (ngSubmit)="onSubmit()">
   
                     <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <label class="form-label" for="form3Example1c">Username</label>
-                        <input type="text" id="form3Example1c" class="form-control" name="username"
-                        formControlName="username" />
+                        <label class="form-label" for="form3Example1c">New password</label>
+                        <input type="password" id="form3Example1c" class="form-control" name="newPassword"
+                        formControlName="newPassword" />
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <label class="form-label" for="form3Example4c">Password</label>
-                        <input type="password" id="form3Example4c" class="form-control" name="password"
-                        formControlName="password" />
+                        <label class="form-label" for="form3Example4c">Confirm new password</label>
+                        <input type="password" id="form3Example4c" class="form-control" name="confirmNewPassword"
+                        formControlName="confirmNewPassword" />
                       </div>
                     </div>
-  
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <a
-                      [routerLink]="['/recover-password']"
-                      class="align-self-center mt-1"
-                      >Forgot your password ?</a>
-                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                          <label class="form-label" for="form3Example4c">Token</label>
+                          <input type="text" id="form3Example4c" class="form-control" name="token"
+                          formControlName="token" />
+                        </div>
+                      </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="submit" class="btn btn-primary btn-lg">Login</button>
+                      <button type="submit" class="btn btn-primary btn-lg">Reset</button>
                     </div>
   
                   </form>
