added Unit Tests methods

--- a/Password-Manager-UI/src/app/alert/alert/alert.component.html
+++ b/Password-Manager-UI/src/app/alert/alert/alert.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-6 offset-md-3 mt-4">
       <div class="alert alert-success" *ngIf="success && !fail" role="alert">
         supprime avec succes !
@@ -7,4 +7,4 @@
         Une erreur s'est produite !
       </div>
     </div>
-</div>
+</div> -->
