--- a/Password-Manager-UI/src/app/Components/recover-password/recover-password.component.html
+++ b/Password-Manager-UI/src/app/Components/recover-password/recover-password.component.html
@@ -1,42 +1,30 @@
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px;">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-  
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Recover your password</p>
-  
-                  <form class="mx-1 mx-md-4" [formGroup]="recoverPassForm" (ngSubmit)="onSubmit()">
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <label class="form-label" for="form3Example1c">Enter your email to recover your password</label>
-                        <input type="text" id="form3Example1c" class="form-control" name="email"
-                        formControlName="email" />
-                      </div>
-                    </div>
+<div class="container-fluid ps-md-0">
+  <div class="row g-0">
+    <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
+    <div class="col-md-8 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-6 mx-auto">
+              <h3 class="login-heading mb-4">Enter your email to recover your password!</h3>
 
-                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="submit" class="btn btn-primary btn-lg">Send</button>
-                    </div>
-  
-                  </form>
-  
+              <!-- Sign In Form -->
+              <form [formGroup]="recoverPassForm" (ngSubmit)="onSubmit()">
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control inp" id="floatingInput" placeholder="Username" name="email"
+                  formControlName="email">
+                  <label for="floatingInput">Email</label>
                 </div>
-                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-  
-                  <img src="https://bsmknighterrant.org/wp-content/uploads/2018/03/Leif-Distractions.jpg"
-                    class="img-fluid" alt="Sample image">
-  
+
+                <div class="d-grid">
+                  <button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Send</button>
                 </div>
-              </div>
+
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</div>
