added Two FA Login data binding angular

--- a/Password-Manager-UI/src/app/Components/two-fa-login/two-fa-login.component.html
+++ b/Password-Manager-UI/src/app/Components/two-fa-login/two-fa-login.component.html
@@ -13,7 +13,7 @@
                         <div> <span>A code has been sent to</span> 
                         <small> your email</small> 
                         <form [formGroup]="twoFAForm" (ngSubmit)="onSubmit()">
-                        <input class="m-2 text-center form-control rounded" type="text" id="first" maxlength="6" name="provider" formControlName="provider" /> 
+                        <input class="m-2 text-center form-control rounded" type="text" maxlength="6" name="token" formControlName="token" /> 
                         <button class="btn btn-lg btn-primary btn-login fw-bold mb-3" type="submit">Continue</button>
                         </form>
                     </div>
