updated verification page

--- a/Password-Manager-UI/src/app/Components/verification-link/verification-link.component.html
+++ b/Password-Manager-UI/src/app/Components/verification-link/verification-link.component.html
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="col-md-9 col-lg-7 mx-auto">
                 <h3 class="login-heading mb-4">Verification link sent!</h3>
-                <p class="text"> We emailed a verification link to your email</p>
+                <p class="text"> We emailed a verification link to <small>{{data.email}}</small></p>
                 <p class="text">Please confirm your email to continue</p>
                 <br>
                 <br>
