--- a/Password-Manager-UI/src/app/Components/dashboard/dashboard.component.html
+++ b/Password-Manager-UI/src/app/Components/dashboard/dashboard.component.html
@@ -191,8 +191,8 @@
                             </h6>
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                        alt="...">
+                                    <!-- <img class="rounded-circle" src="img/undraw_profile_1.svg"
+                                        alt="..."> -->
                                     <div class="status-indicator bg-success"></div>
                                 </div>
                                 <div class="font-weight-bold">
@@ -203,8 +203,8 @@
                             </a>
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                        alt="...">
+                                    <!-- <img class="rounded-circle" src="img/undraw_profile_2.svg"
+                                        alt="..."> -->
                                     <div class="status-indicator"></div>
                                 </div>
                                 <div>
@@ -215,8 +215,8 @@
                             </a>
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                        alt="...">
+                                    <!-- <img class="rounded-circle" src="img/undraw_profile_3.svg"
+                                        alt="..."> -->
                                     <div class="status-indicator bg-warning"></div>
                                 </div>
                                 <div>
@@ -227,7 +227,7 @@
                             </a>
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
+                                    <!-- <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" -->
                                         alt="...">
                                     <div class="status-indicator bg-success"></div>
                                 </div>
@@ -267,7 +267,7 @@
                                 Activity Log
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                            <a class="dropdown-item" href="#" (click)="logout()" data-toggle="modal" data-target="#logoutModal">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Logout
                             </a>
@@ -462,7 +462,7 @@
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
-                                <div class="chart-pie pt-4 pb-2">
+                                <div class="chart-pie pt-4">
                                     <canvas id="myPieChart"></canvas>
                                 </div>
                                 <div class="mt-4 text-center small">
