updated dashboard and added user-data service

--- a/Password-Manager-UI/src/app/Components/dashboard/dashboard.component.html
+++ b/Password-Manager-UI/src/app/Components/dashboard/dashboard.component.html
@@ -40,10 +40,10 @@
                 data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Custom Utilities:</h6>
-                    <a class="collapse-item" href="utilities-color.html">Colors</a>
+                    <!-- <a class="collapse-item" href="utilities-color.html">Colors</a>
                     <a class="collapse-item" href="utilities-border.html">Borders</a>
                     <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                    <a class="collapse-item" href="utilities-other.html">Other</a>
+                    <a class="collapse-item" href="utilities-other.html">Other</a> -->
                 </div>
             </div>
         </li>
@@ -130,7 +130,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-bell fa-fw"></i>
                             <!-- Counter - Alerts -->
-                            <span class="badge badge-danger badge-counter">3+</span>
+                            <span class="badge badge-danger badge-counter">2+</span>
                         </a>
                         <!-- Dropdown - Alerts -->
                         <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -145,21 +145,11 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="small text-gray-500">December 12, 2019</div>
+                                    <div class="small text-gray-500">September 13, 2022</div>
                                     <span class="font-weight-bold">A new monthly report is ready to download!</span>
                                 </div>
                             </a>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="mr-3">
-                                    <div class="icon-circle bg-success">
-                                        <i class="fas fa-donate text-white"></i>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="small text-gray-500">December 7, 2019</div>
-                                    $290.29 has been deposited into your account!
-                                </div>
-                            </a>
+                            
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="mr-3">
                                     <div class="icon-circle bg-warning">
@@ -167,8 +157,8 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="small text-gray-500">December 2, 2019</div>
-                                    Spending Alert: We've noticed unusually high spending for your account.
+                                    <div class="small text-gray-500">September 12, 2022</div>
+                                    Security Alert: We've noticed weak passwords!
                                 </div>
                             </a>
                             <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
@@ -181,7 +171,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-envelope fa-fw"></i>
                             <!-- Counter - Messages -->
-                            <span class="badge badge-danger badge-counter">7</span>
+                            <span class="badge badge-danger badge-counter">1</span>
                         </a>
                         <!-- Dropdown - Messages -->
                         <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -189,52 +179,16 @@
                             <h6 class="dropdown-header">
                                 Message Center
                             </h6>
+                            
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
-                                    <!-- <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                        alt="..."> -->
-                                    <div class="status-indicator bg-success"></div>
-                                </div>
-                                <div class="font-weight-bold">
-                                    <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                        problem I've been having.</div>
-                                    <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image mr-3">
-                                    <!-- <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                        alt="..."> -->
-                                    <div class="status-indicator"></div>
-                                </div>
-                                <div>
-                                    <div class="text-truncate">I have the photos that you ordered last month, how
-                                        would you like them sent to you?</div>
-                                    <div class="small text-gray-500">Jae Chun · 1d</div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image mr-3">
-                                    <!-- <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                        alt="..."> -->
-                                    <div class="status-indicator bg-warning"></div>
-                                </div>
-                                <div>
-                                    <div class="text-truncate">Last month's report looks great, I am very happy with
-                                        the progress so far, keep up the good work!</div>
-                                    <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image mr-3">
-                                    <!-- <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" -->
+                                    <img class="rounded-circle" src="assets/undraw_rocket.svg"
                                         alt="...">
                                     <div class="status-indicator bg-success"></div>
                                 </div>
                                 <div>
-                                    <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                                        told me that people say this to all dogs, even if they aren't good...</div>
-                                    <div class="small text-gray-500">Chicken the Dog · 2w</div>
+                                    <div class="text-truncate">Passwords Manager Pro is packed with premium features and more!...</div>
+                                    <div class="small text-gray-500">Passwords Manager Pro · 2w</div>
                                 </div>
                             </a>
                             <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
@@ -294,15 +248,15 @@
 
                     <!-- Earnings (Monthly) Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card bg-tools shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-center display-6">
+                                        <div class="text-center text-white display-6">
                                             <i class="fa-solid fa-briefcase fa-2x"></i>
                                         </div>
                                         <br>
-                                        <div class="font-weight-bold text-black text-center text-uppercase display-6 mb-1">
+                                        <div class="font-weight text-white text-center text-uppercase display-6 mb-1">
                                             Tools
                                         </div>
                                     </div>
@@ -315,15 +269,16 @@
 
                     <!-- Earnings (Monthly) Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-info shadow h-100 py-2">
+                        <div class="card bg-health shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Password Health
+                                        <div class="text-s font-weight text-white text-center display-6 text-uppercase mb-3">Password Health
                                         </div>
+                                        <br>
                                         <div class="row no-gutters align-items-center">
                                             <div class="col-auto">
-                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                                <div class="h5 mb-0 mr-3 font-weight-bold text-white">60%</div>
                                             </div>
                                             <div class="col">
                                                 <div class="progress progress-sm mr-2">
@@ -344,13 +299,13 @@
 
                     <!-- Pending Requests Card Example -->
                     <div class="col-xl-6 col-lg-5 mb-4">
-                        <div class="card border-left-danger shadow h-100 py-2">
+                        <div class="card bg-info shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-auto">
-                                        <div class="font-weight text-black text-uppercase display-6 mb-4">
+                                        <div class="font-weight text-white text-uppercase display-6 mb-4">
                                             How to protect your passwords from theft</div>
-                                            <div class="btn btn-info ">Read article</div>
+                                            <div class="btn bg-white text-black">Read article</div>
                                     </div>
                                 </div>
                             </div>
@@ -372,7 +327,9 @@
                                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h6 class="m-0 font-weight-bold text-primary">Recently Added</h6>
                                 <div class="dropdown no-arrow">
-                                   
+                                    <div class="col-auto text-primary">
+                                        <a href="" title="Add Password"><i class="fa fa-plus fa-2x"></i></a>
+                                    </div>
                                 </div>
                             </div>
                             <!-- Card Body -->
@@ -439,6 +396,32 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-md-3 mb-4">
+                                            <div class="card border-left-info shadow h-100 py-2">
+                                                <div class="card-body">
+                                                    <div class="row no-gutters align-items-center">
+                                                        <div class="col mr-2">
+                                                            <div class="text-xs font-weight-bold text-black text-uppercase mb-1">
+                                                                Twitter</div>
+                                                        </div>
+                                                        <div class="col-auto">
+                                                            <i class="fa-brands fa-twitter fa-2x"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2 mb-2">
+                                            <div class="rounded-circle shadow h-100 py-2">
+                                                <div class="card-body">
+                                                    <div class="row no-gutters align-items-center text-black">
+                                                        <div class="col-auto">
+                                                            <a href="" class="text-primary" title="See more"><i class="fa-solid fa-circle-arrow-right fa-2x"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -461,11 +444,13 @@
                                 </div>
                             </div>
                             <!-- Card Body -->
-                            <div class="card-body">
-                                <div class="chart-pie pt-4">
-                                    <canvas id="myPieChart"></canvas>
-                                </div>
-                                <div class="mt-4 text-center small">
+                            <div class="card-body text-center ">
+                                <app-doughnut-chart></app-doughnut-chart>
+                                <!-- <div class="chart-pie pt-4 text-center "> -->
+                                    <!-- <canvas id="myPieChart"></canvas> -->
+                                    
+                                <!-- </div> -->
+                                <!-- <div class="mt-4 text-center small">
                                     <span class="mr-2">
                                         <i class="fas fa-circle text-danger"></i> Weak
                                     </span>
@@ -475,7 +460,7 @@
                                     <span class="mr-2">
                                         <i class="fas fa-circle text-warning"></i> Reused
                                     </span>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
