added confirmation email function to verification component

--- a/Password-Manager-UI/src/app/Components/verification-link/verification-link.component.html
+++ b/Password-Manager-UI/src/app/Components/verification-link/verification-link.component.html
@@ -13,7 +13,7 @@
                 <br>
                 <br>
                 <p class="text">Didn't get confirmation email?</p>
-                <a href="" class="link">Send again</a>
+                <a (click)="sendAgain()" class="link">Send again</a>
               </div>
             </div>
           </div>
