--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex align-items-center justify-content-center">
+<div class="container d-flex align-items-center justify-content-center backg">
   <div class="row">
     <div class="card">
       <div class="additional">
@@ -108,8 +108,9 @@
       <div class="card">
         <div class="additionalp">
           <div class="user-card">
-           
+          <div (click)="add()" class="" data-toggle="modal" data-target="#modalAbandonedCart">
             <img src="assets/plus.png" width="80" height="80" viewBox="0 0 250 250" alt="Google" aria-labelledby="title desc" class="center">
+          </div>
           </div>
           
         </div>
@@ -122,6 +123,35 @@
   </div>
 </div>
 
-<div id ="add-password">
-  <app-add-password></app-add-password>
+
+<!-- Modal: modalAddPassword-->
+<div class="modal fade right" id="modalAbandonedCart" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true" data-backdrop="false">
+  <div class="modal-dialog modal-side modal-bottom-right modal-notify modal-info" role="document">
+    <!--Content-->
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <p class="heading">Product in the cart
+        </p>
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="white-text">&times;</span>
+        </button>
+      </div>
+
+      <!--Body-->
+      <div class="modal-body">
+       <app-add-password></app-add-password>
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center">
+        <a type="button" class="btn btn-info">Go to cart</a>
+        <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">Cancel</a>
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
 </div>
+<!-- Modal: modalAbandonedCart-->
