added getCurrentUserData route to userService

--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -108,7 +108,7 @@
       <div class="card">
         <div class="additionalp">
           <div class="user-card">
-          <div (click)="add()" class="" data-toggle="modal" data-target="#modalAbandonedCart">
+          <div (click)="add()" class="" data-toggle="modal" data-target="#modalAddPassword">
             <img src="assets/plus.png" width="80" height="80" viewBox="0 0 250 250" alt="Google" aria-labelledby="title desc" class="center">
           </div>
           </div>
@@ -125,14 +125,14 @@
 
 
 <!-- Modal: modalAddPassword-->
-<div class="modal fade right" id="modalAbandonedCart" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade right align-items-center" id="modalAddPassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true" data-backdrop="false">
   <div class="modal-dialog modal-side modal-bottom-right modal-notify modal-info" role="document">
     <!--Content-->
     <div class="modal-content">
       <!--Header-->
       <div class="modal-header">
-        <p class="heading">Product in the cart
+        <p class="heading">Add new password
         </p>
 
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -147,7 +147,7 @@
 
       <!--Footer-->
       <div class="modal-footer justify-content-center">
-        <a type="button" class="btn btn-info">Go to cart</a>
+        <a type="button" class="btn btn-info">Add</a>
         <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">Cancel</a>
       </div>
     </div>
