--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.css
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.css
@@ -194,3 +194,10 @@ html, body {
   background-color: #f8f8f8;
   opacity: 0.7;
 }
+.backg .modal-open{
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -o-filter: blur(1px);
+  -ms-filter: blur(1px);
+  filter: blur(1px);
+}
