updated getCurrentUserData route and added credentials to http options

--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex align-items-center justify-content-center backg">
   <div class="row">
-    <div class="card">
+    <div class="card" *ngFor="let password of passwordsList">
       <div class="additional">
         <div class="user-card">
          
@@ -14,15 +14,15 @@
         </div>
         <div class="more-info">
             <br>
-          <h1>Facebook</h1>
+          <h1>{{password.name}}</h1>
           <div class="coords">
             <div class="mb-3">
                 <label for="floatingInput">Email</label>
-                <input type="text" class="form-control inp" id="floatingInput" placeholder="Email" name="email">
+                <input type="text" class="form-control inp" id="floatingInput" value="{{password.email}}" name="email">
             </div>
             <div class="mb-3">
                 <label for="floatingInput">Encrypted Password</label>
-                <input type="password" class="form-control inp" id="floatingInput" placeholder="Password" name="password">
+                <input type="text" class="form-control inp" id="floatingInput" value="{{password.encryptedPassword}}"  name="password">
             </div>
         </div>
           
@@ -30,9 +30,9 @@
       </div>
       <div class="general text-black">
         <br>
-        <h1>Facebook</h1>
+        <h1>{{password.name}}</h1>
         <br>
-        <h6>boulouane.imane@gmail.com</h6>
+        <h6>{{password.email}}</h6>
         <span class="more">Mouse over the card for more info</span>
       </div>
     </div>
