added Refresh Token Implementation in Angular App

--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <div class="card green">
+    <!-- <div class="card green">
         <div class="additional">
           <div class="user-card">
            
@@ -69,41 +69,8 @@
           <h6>boulouane@gmail.com</h6>
           <span class="more">Mouse over the card for more info</span>
         </div>
-      </div>
+      </div> -->
 
-      <div class="card green">
-        <div class="additional">
-          <div class="user-card">
-           
-            <div class="points center">
-              Safe
-            </div>
-            <img src="assets/twitter.png" width="80" height="80" viewBox="0 0 250 250" alt="Google" aria-labelledby="title desc" class="center">
-          </div>
-          <div class="more-info">
-              <br>
-            <h1>Twitter</h1>
-            <div class="coords">
-              <div class="mb-3">
-                  <label for="floatingInput">Email</label>
-                  <input type="text" class="form-control inp" id="floatingInput" placeholder="Email" name="email">
-              </div>
-              <div class="mb-3">
-                  <label for="floatingInput">Encrypted Password</label>
-                  <input type="password" class="form-control inp" id="floatingInput" placeholder="Password" name="password">
-              </div>
-          </div>
-            
-          </div>
-        </div>
-        <div class="general text-black">
-          <br>
-          <h1>Twitter</h1>
-          <br>
-          <h6>imane.boulouane@gmail.com</h6>
-          <span class="more">Mouse over the card for more info</span>
-        </div>
-      </div>
 
       <div class="card">
         <div class="additionalp">
