updated addNewPassword form

--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -7,7 +7,7 @@
           <div class="points center">
             Weak
           </div>
-          <img src="assets/facebook.png" width="80" height="80" viewBox="0 0 250 250" alt="facebook" aria-labelledby="title desc" class="center">
+          <img [src]="password.imageUrl" width="80" height="80" viewBox="0 0 250 250" alt="facebook" aria-labelledby="title desc" class="center">
 
             
             
@@ -18,11 +18,12 @@
           <div class="coords">
             <div class="mb-3">
                 <label for="floatingInput">Email</label>
-                <input type="text" class="form-control inp" id="floatingInput" value="{{password.email}}" name="email">
+                <input type="text" class="form-control inp" id="floatingInput" value="{{password.email}}" name="email" disabled>
             </div>
             <div class="mb-3">
-                <label for="floatingInput">Encrypted Password</label>
-                <input type="text" class="form-control inp" id="floatingInput" value="{{password.encryptedPassword}}"  name="password">
+                <label for="floatingInput">Encrypted Password   </label>
+                <a (click)='showHidePassword()'><i class="fa fa-eye-slash" aria-hidden="true"></i></a>           
+                <input [type]=" showPassword ? 'text' : 'password' " class="form-control inp" id="floatingInput" value="{{password.encryptedPassword}}"  name="encryptedPassword" disabled>
             </div>
         </div>
           
@@ -75,7 +76,7 @@
       <div class="card">
         <div class="additionalp">
           <div class="user-card">
-          <div (click)="add()" class="" data-toggle="modal" data-target="#modalAddPassword">
+          <div class="" data-toggle="modal" data-target="#modalAddPassword">
             <img src="assets/plus.png" width="80" height="80" viewBox="0 0 250 250" alt="Google" aria-labelledby="title desc" class="center">
           </div>
           </div>
@@ -108,15 +109,47 @@
       </div>
 
       <!--Body-->
+      <form [formGroup]="newPasswordForm" (ngSubmit)="newPassword()">
       <div class="modal-body">
-       <app-add-password></app-add-password>
+       
+          <div class="card-body">
+            <div class="form-group">
+              <label for="exampleInputName">Name</label>
+              <input type="email" class="form-control" id="exampleInputName" placeholder="Enter a name" name="name"
+              formControlName="name">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" name="email"
+              formControlName="email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="encryptedPassword"
+              formControlName="encryptedPassword">
+            </div>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupFileAddon01">Upload image</span>
+              </div>
+              <div class="custom-file">
+                <input type="file" class="custom-file-input" id="inputGroupFile01"
+                  aria-describedby="inputGroupFileAddon01" name="imageUrl" formControlName="imageUrl">
+                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+              </div>
+            </div>
+          </div>
+          <!-- /.card-body -->
+          
       </div>
 
       <!--Footer-->
       <div class="modal-footer justify-content-center">
-        <a type="button" class="btn btn-info">Add</a>
+        <button type="submit" class="btn btn-info">Add</button>
         <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">Cancel</a>
       </div>
+    </form> 
+      
     </div>
     <!--/.Content-->
   </div>
