--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -1,11 +1,11 @@
 <div class="container d-flex align-items-center justify-content-center backg">
   <div class="row">
-    <div class="card" *ngFor="let password of passwordsList">
+    <div class="card green" *ngFor="let password of passwordsList">
       <div class="additional">
         <div class="user-card">
          
           <div class="points center">
-            Weak
+            Safe
           </div>
           <img [src]="password.imageUrl" width="80" height="80" viewBox="0 0 250 250" alt="facebook" aria-labelledby="title desc" class="center">
 
@@ -38,40 +38,7 @@
       </div>
     </div>
 
-    <!-- <div class="card green">
-        <div class="additional">
-          <div class="user-card">
-           
-            <div class="points center">
-              Safe
-            </div>
-            <img src="assets/google.png" width="80" height="80" viewBox="0 0 250 250" alt="Google" aria-labelledby="title desc" class="center">
-          </div>
-          <div class="more-info">
-              <br>
-            <h1>Google</h1>
-            <div class="coords">
-              <div class="mb-3">
-                  <label for="floatingInput">Email</label>
-                  <input type="text" class="form-control inp" id="floatingInput" placeholder="Email" name="email">
-              </div>
-              <div class="mb-3">
-                  <label for="floatingInput">Encrypted Password</label>
-                  <input type="password" class="form-control inp" id="floatingInput" placeholder="Password" name="password">
-              </div>
-          </div>
-            
-          </div>
-        </div>
-        <div class="general text-black">
-          <br>
-          <h1>Google</h1>
-          <br>
-          <h6>boulouane@gmail.com</h6>
-          <span class="more">Mouse over the card for more info</span>
-        </div>
-      </div> -->
-
+    
 
       <div class="card">
         <div class="additionalp">
@@ -128,14 +95,20 @@
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="encryptedPassword"
               formControlName="encryptedPassword">
             </div>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroupFileAddon01">Upload image</span>
-              </div>
-              <div class="custom-file">
-                <input type="file" class="custom-file-input" id="inputGroupFile01"
-                  aria-describedby="inputGroupFileAddon01" name="imageUrl" formControlName="imageUrl">
-                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+            <div class="form-group">
+              <div class="nav-item dropdown no-arrow">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- <span class="mr-2 d-none d-lg-inline text-gray-600 small">Choose image</span> -->
+                    <input type="text" class="form-control" placeholder="Choose image" name="imageUrl" formControlName="imageUrl">
+                </a>
+                <!-- Dropdown - User Information -->
+                <div class="dropdown-menu dropdown-menu-right "
+                    aria-labelledby="userDropdown">
+                    <a class="dropdown-item" *ngFor="let logo of logos" id="imageUrl" name="imageUrl" (click)='chooseImageUrl(logo.name)'>
+                        {{logo.name}}
+                    </a>
+                </div>
               </div>
             </div>
           </div>
